package structure.decorator.tokenize;

import java.util.List;

public interface ITokenize {
    List<String> tokenize();
}
